tests/conformance/fail/no_std/print_rejected.ny
no_std

fn main() {
    print(1)
}
